unpackaged/main/default/objects/Google_Callr_Services_Params__c/Google_Callr_Services_Params__c.object-meta.xml
<CustomObject>
    <label>Google Callr Services Params</label>
    <nameField>
        <label>Nom de Google_Callr_Services_Param</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Google Callr Services Params</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>