unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Creation_Date__c</fullName>
    <label>Creation Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>