unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/Destination_Param__c.field-meta.xml
<CustomField>
    <fullName>Destination_Param__c</fullName>
    <label>Destination Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>