unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/EstimatedTravelTime_Sec__c.field-meta.xml
<CustomField>
    <fullName>EstimatedTravelTime_Sec__c</fullName>
    <label>EstimatedTravelTime Sec</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>