unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/EventId__c.field-meta.xml
<CustomField>
    <fullName>EventId__c</fullName>
    <label>EventId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>