unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Job_Id__c</fullName>
    <label>Job_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>