unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/MasterLabel__c.field-meta.xml
<CustomField>
    <fullName>MasterLabel__c</fullName>
    <label>MasterLabel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>