unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/Origine_Param__c.field-meta.xml
<CustomField>
    <fullName>Origine_Param__c</fullName>
    <label>Origine_Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>