unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <label>Recipient_Phone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>