unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/RecordId_1__c.field-meta.xml
<CustomField>
    <fullName>RecordId_1__c</fullName>
    <label>RecordId_1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>