unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/RecordId_2__c.field-meta.xml
<CustomField>
    <fullName>RecordId_2__c</fullName>
    <label>RecordId_2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>