unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/RecordId_3__c.field-meta.xml
<CustomField>
    <fullName>RecordId_3__c</fullName>
    <label>RecordId_3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>