unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message__c</fullName>
    <label>SMS_Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>