unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/SMS_Sender__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sender__c</fullName>
    <label>SMS_Sender</label>
    <length>100</length>
    <type>Text</type>
</CustomField>