unpackaged/main/default/objects/Google_Callr_Services_Params__c/fields/SMSType__c.field-meta.xml
<CustomField>
    <fullName>SMSType__c</fullName>
    <label>SMSType</label>
    <length>100</length>
    <type>Text</type>
</CustomField>